src/objects/BMCServiceDesk__Release__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpRelease</customHelpPage>
    <description>This object allows you to store data for Release.</description>
    <fields>
        <fullName>BMCServiceDesk__ActualDeploymentEndDate__c</fullName>
        <label>Actual Deployment End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ActualDeploymentStartDate__c</fullName>
        <label>Actual Deployment Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ActualImplementationEndDate__c</fullName>
        <label>Actual Implementation End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ActualImplementationStartDate__c</fullName>
        <label>Actual Implementation Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AllTaskCloseController__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to activate the workflow for sending email to Release owner. The value is toggled to True if the last value was False to activate field update.</description>
        <label>All Tasks Closed Controller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BLANK__c</fullName>
        <description>Use this field to add space between fields in a Console fieldset.</description>
        <label>&lt;BLANK&gt;</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BudgetAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Justification__c</fullName>
        <label>Business Justification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Strategic</fullName>
                </value>
                <value>
                    <fullName>Business Unit Strategic</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Customer Commitment</fullName>
                </value>
                <value>
                    <fullName>Sarbanes-Oxley</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category_ID__c</fullName>
        <formula>BMCServiceDesk__FKCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CloseDateTime__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Close_Comments__c</fullName>
        <label>Close Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClosureCategory__c</fullName>
        <label>Closure Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Case Rejected</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Partially Implemented</fullName>
                </value>
                <value>
                    <fullName>Rolled Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Deep_View__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__DeepView?id=&quot;+Id, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/deep-view.png&quot;, &quot;&quot;, 18, 18), &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SmartView</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phased</fullName>
                </value>
                <value>
                    <fullName>Non-phased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EndDeploymentDate__c</fullName>
        <label>End Deployment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EndImplementationDate__c</fullName>
        <label>End Implementation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Category__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active category</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClosedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is automatically set to the User ID of the currently logged-on Change Manager.</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKImpact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the release&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the release.</inlineHelpText>
        <label>Impact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Impact__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active impact</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKPriority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
        <label>Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Priority__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active priority</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Priority__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKReleaseCoordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Coordinator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.BMCServiceDesk__IsStaffUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStaff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the staff to whom you want to assign the record.</inlineHelpText>
        <label>Staff</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.BMCServiceDesk__IsStaffUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the appropriate status for the release. Status is used to display the progress of an release through its stages of opening to closure.</inlineHelpText>
        <label>Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__appliesToRelease__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the template that you want to apply to the record. Templates enable you to prepopulate commonly used fields on a form.</inlineHelpText>
        <label>Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__templateFor__c</field>
                <operation>equals</operation>
                <value>Release</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__systemTemplate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active template for the release.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select how quickly the release needs to be resolved. The urgency and the level of impact are used to calculate the priority of the release.</inlineHelpText>
        <label>Urgency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Urgency__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active urgency</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the release record is no longer valid, but the record has to be retained for compliance with the records retention policy. For example, if a client has left the account, all the client&apos;s release records would be invalid.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Launch_Console__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=ReleaseLaunchConsole&amp;recordId=&quot;+Id+&quot;&amp;recordName=&quot;+Name+&quot;&amp;isdtp=vw&quot;, Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record will be opened either in Release Console or in Remedyforce Console tab</inlineHelpText>
        <label>Launch Console</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LockedRecordTimestamp__c</fullName>
        <description>this field is used in case of record locking.</description>
        <label>LockedRecordTimestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OpenDateTime__c</fullName>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Priority_ID__c</fullName>
        <formula>BMCServiceDesk__FKPriority__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Queue__c</fullName>
        <description>Queue to which the record is assigned.</description>
        <formula>IF(UPPER(LEFT(OwnerId , 3)) =&quot;00G&quot;,BMCServiceDesk__queueName__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Release_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is selected if the release has failed.</description>
        <label>Release Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Release_Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Delta</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Release_Title__c</fullName>
        <label>Release Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Release_Type__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Release_console_detail_link__c</fullName>
        <description>To be used in Service Cloud Console</description>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__ReleaseConsole?record_name=&quot;&amp; Name &amp;&quot;&amp;record_id=&quot; &amp; Id &amp; &quot;&amp;isdtp=vw&amp;isServiceCloudConsole=true&quot;,Name, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release #+</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RequiredLicensesVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Licenses Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Required_CIs_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required CIs Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Required_Contracts_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Contracts Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StartDeploymentDate__c</fullName>
        <label>Start Deployment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StartImplementationDate__c</fullName>
        <label>Start Implementation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__State__c</fullName>
        <defaultValue>true</defaultValue>
        <label>State Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status_ID__c</fullName>
        <formula>BMCServiceDesk__FKStatus__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Task_Closed_Controller__c</fullName>
        <description>This field is used to activate the workflow for sending email to Release owner after closing each linked task. The value is set with the linked task name to activate field update.</description>
        <label>Task Closed Controller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Testing_Completed_Date__c</fullName>
        <label>Testing Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UpdateCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field can be used in workflows to increment the count when a new record is added to the Release History.</description>
        <label>Record Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__queueName__c</fullName>
        <inlineHelpText>Displays the name of the queue to which the release was last assigned.</inlineHelpText>
        <label>Last Queue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__shortDescription__c</fullName>
        <inlineHelpText>This field will contain value first 255 character value of description field.</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>Application_Develeopment_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>Application Development</label>
        <queue>Application_Development</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__FKPriority__c</columns>
        <columns>BMCServiceDesk__Description__c</columns>
        <columns>BMCServiceDesk__Release_Type__c</columns>
        <columns>BMCServiceDesk__Release_Subtype__c</columns>
        <columns>BMCServiceDesk__FKStatus__c</columns>
        <columns>BMCServiceDesk__FKReleaseCoordinator__c</columns>
        <columns>BMCServiceDesk__OpenDateTime__c</columns>
        <columns>BMCServiceDesk__DueDate__c</columns>
        <columns>BMCServiceDesk__CloseDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Change_Management_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>Change Management</label>
        <queue>Change_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_Admin_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>Email and Messaging</label>
        <queue>Email_Admin</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Facilities_Management_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>Facilities Management</label>
        <queue>Facilities_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Infrastructure_Management_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>Infrastructure Management</label>
        <queue>Infrastructure_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Network_Admins_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>Network Management</label>
        <queue>Network_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Security_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>Security Management</label>
        <queue>Security</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Telecom_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>Telecommunications</label>
        <queue>Telecom</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RM{00000000}</displayFormat>
        <label>Release #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__ActualDeploymentDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__ActualDeploymentEndDate__c),ISBLANK(BMCServiceDesk__ActualDeploymentEndDate__c) ) ), BMCServiceDesk__ActualDeploymentEndDate__c &lt; BMCServiceDesk__ActualDeploymentStartDate__c )</errorConditionFormula>
        <errorMessage>Actual Deployment End Date must be later than the Actual Deployment Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__ActualImplementationDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__ActualImplementationEndDate__c),ISBLANK(BMCServiceDesk__ActualImplementationEndDate__c) ) ), BMCServiceDesk__ActualImplementationEndDate__c &lt; BMCServiceDesk__ActualImplementationStartDate__c )</errorConditionFormula>
        <errorMessage>Actual Implementation End Date must be later than the Actual Implementation Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Cannot_Update_Closed_Release</fullName>
        <active>true</active>
        <description>This Rule does not allow user to modify record, if it is closed.</description>
        <errorConditionFormula>AND( NOT( BMCServiceDesk__State__c ) , NOT(PRIORVALUE( BMCServiceDesk__State__c ) ), NOT( ISNEW() ))</errorConditionFormula>
        <errorMessage>This release is closed. Reopen the release to modify it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__DeploymentDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__EndDeploymentDate__c),ISBLANK(BMCServiceDesk__EndDeploymentDate__c) ) ), BMCServiceDesk__EndDeploymentDate__c &lt; BMCServiceDesk__StartDeploymentDate__c )</errorConditionFormula>
        <errorMessage>End Deployment Date must be later than the Start Deployment Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__ImplementationDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__EndImplementationDate__c),ISBLANK(BMCServiceDesk__EndImplementationDate__c) ) ), BMCServiceDesk__EndImplementationDate__c &lt; BMCServiceDesk__StartImplementationDate__c )</errorConditionFormula>
        <errorMessage>End Implementation Date must be later than the Start Implementation Date.</errorMessage>
    </validationRules>
</CustomObject>